--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
 
     <string name="app_name">ProjectGaucho</string>
     <string name="title_activity_maps">GauchoLife</string>
+    <string name="action_search">Search</string>
+    <string name="action_settings">Settings</string>
+    <string name="filp">Filp</string>
+    <string name="layout">Layout</string>
+    <string name="direction">Direction</string>
+    <string name="search_hint">Location</string>
 
 </resources>
