--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,12 @@
     <string name="title_activity_maps">GauchoLife</string>
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
-    <string name="filp">Filp</string>
+    <string name="flip">Flip</string>
     <string name="layout">Layout</string>
     <string name="direction">Direction</string>
     <string name="search_hint">Location</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_flip">FlipActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
